2003-04-11 Alexander Dymo <cloudtemple@mksat.net>
    * Applied rubysupport part, including application and filecreate templates
      Ruby support is created by Marek Janukowicz <child@t17.ds.pwr.wroc.pl>.
    * Implemented CPPFLAGS and LDFLAGS input fields in "Configure Options"
      dialog for Automake Manager.
    * plugins/gccoptions:
      "Compiler Options" dialog now honors unrecognized user-defined options,
      more predefined compiler warnings are available.

2003-04-10  luc willems  <Willems.luc@pandora.be>
	* add support for perl filecreate templates
	* make sure declaredinfile is set correctly after adding an item to classstore so removeWithReferences() will work correctly
	* add parsing of "use" file after saveFile()

2003-04-09 Harald Fernengel <harry@kdevelop.org>
    * Applied ClearCase part from Ajay Guleria
    * Goto error now works again

2003-04-08 Caleb Tennis <caleb@aei-tech.com>
    * Retag Alpha 4

2003-04-05 Alexander Dymo <cloudtemple@mksat.net>
    Applied patch from Luc Willems <Willems.luc@pandora.be>:
    Classview:
    - add support for scripts folder in classviewer
    Pelrsupportpart:
    - add support for namespaces and scripts in classviewer
    - parsing of "use ...." libraries
    - get list of INC path in local installed perl to allow parsing of perl
    libraries outside the project directory

2003-04-05 Amilcar Lucas <a.lucas@tu-bs.de>
    - Simplified the "Inteligent messages auto-hide" code a lot
    - Now it also works for AutoMake&friends and configure

2003-04-01 Alexander Dymo <cloudtemple@mksat.net>
    * C/C++ "New class" dialog improvements:
    - Nested namespace support

2003-03-30 Julian Rockey <linux@jrockey.com>
	* parts/appwizard
	- added proposed replacement for highly broken dcopservice template

2003-03-29 Alexander Dymo <cloudtemple@mksat.net>
    * C/C++ "New class" dialog improvements:
    - Editor for base class file names
    - Base class include files can be set as global or local