@@ -511,7 +511,7 @@ char *yytext;
 #define INITIAL 0
 /******************************************************************************
  *
- * $Id$
+ * 
  *
  * Copyright (C) 1997-2003 by Dimitri van Heesch.
  *
@@ -2957,6 +2957,12 @@ void Config::check()
     PUTENV(buf);
   }
 
+  int &depth = Config_getInt("MAX_DOT_GRAPH_DEPTH");
+  if (depth==0)
+  {
+    depth=1000;
+  }
+  
   if (Config_getBool("OPTIMIZE_OUTPUT_JAVA") && Config_getBool("INLINE_INFO"))
   {
     // don't show inline info for Java output, since Java has no inline
@@ -4104,8 +4110,21 @@ void Config::create()
   //-----------------------------------------------------------------------------------------------
   cl = addList(
                     "TAGFILES",
-                    "The TAGFILES tag can be used to specify one or more tagfiles. \n"
-                 );
+                    "The TAGFILES option can be used to specify one or more tagfiles. \n"
+                    "Optionally an initial location of the external documentation \n"
+                    "can be added for each tagfile. The format of a tag file without \n"
+                    "this location is as follows: \n"
+                    "  TAGFILES = file1 file2 ... \n"
+                    "Adding location for the tag files is done as follows: \n"
+                    "  TAGFILES = file1=loc1 \"file2 = loc2\" ... \n"
+                    "where \"loc1\" and \"loc2\" can be relative or absolute paths or \n"
+                    "URLs. If a location is present for each tag, the installdox tool \n"
+                    "does not have to be run to correct the links.\n"
+                    "Note that each tag file must have a unique name\n"
+                    "(where the name does NOT include the path)\n"
+                    "If a tag file is not located in the directory in which doxygen \n"
+                    "is run, you must also specify the path to the tagfile here. \n"
+               );
   cl->setWidgetType(ConfigList::File);
   cs = addString(
                     "GENERATE_TAGFILE",
@@ -4256,6 +4275,18 @@ void Config::create()
                     "the specified constraint. Beware that most browsers cannot cope with very \n"
                     "large images. \n",
                     100,30000,1024
+                );
+  ci = addInt(
+                    "MAX_DOT_GRAPH_DEPTH",
+                    "The MAX_DOT_GRAPH_DEPTH tag can be used to set the maximum depth of the \n"
+                    "graphs generated by dot. A depth value of 3 means that only nodes reachable \n"
+                    "from the root by following a path via at most 3 edges will be shown. Nodes that \n"
+		    "lay further from the root node will be omitted. Note that setting this option to \n"
+		    "1 or 2 may greatly reduce the computation time needed for large code bases. Also \n"
+		    "note that a graph may be further truncated if the graph's image dimensions are \n"
+		    "not sufficient to fit the graph (see MAX_DOT_GRAPH_WIDTH and MAX_DOT_GRAPH_HEIGHT). \n"
+		    "If 0 is used fot the depth value (the default), the graph is not depth constraint. \n",
+                    0,1000,0
                 );
   ci->addDependency("HAVE_DOT");
   cb = addBool(
