@@ -1,3 +1,7 @@
+2003-04-14 Amilcar Lucas <a.lucas@tu-bs.de>
+    * Updated integrated Doxywizard (Doxygen Configuration GUI) to 1.3 version.
+      This maintains full backward compatibility with previous Doxygen versions.
+
 2003-04-11 Alexander Dymo <cloudtemple@mksat.net>
     * Applied rubysupport part, including application and filecreate templates
       Ruby support is created by Marek Janukowicz <child@t17.ds.pwr.wroc.pl>.
